--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
+    "buffer": "^6.0.3",
     "node-fetch": "^3.2.6",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.2",
+    "react-switch": "^7.0.0",
+    "react-thermal-printer": "^0.11.0",
     "socket.io-client": "^4.5.1",
     "styled-components": "^5.3.5",
     "uuid": "^8.3.2",
