--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.27.2",
     "buffer": "^6.0.3",
+    "moment": "^2.29.4",
     "node-fetch": "^3.2.6",
     "react": "^18.1.0",
+    "react-burger-menu": "^3.0.9",
     "react-dom": "^18.1.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
